clusters/azure/colour/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colour-gitops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-ops-colour-frontend
  namespace: colour-gitops
  labels:
    app.kubernetes.io/name: colour-gitops
    app.kubernetes.io/component: git-ops-colour-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: colour-gitops
      app.kubernetes.io/component: git-ops-colour-frontend
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: colour-gitops
        app.kubernetes.io/component: git-ops-colour-frontend
    spec:
      containers:
      - name: colour-gitops
        #image: paulofrazao/weaveworks-gitops:0.1
        #image: paulofrazao/launchpad:latest
        image: paulofrazao/k8s-lb-scaling:yellow
        #image: paulofrazao/k8s-lb-scaling:red
        #image: paulofrazao/suse-demo-yellow:0.1.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: git-ops-colour-frontend
  namespace: colour-gitops
  labels:
    app.kubernetes.io/name: colour-gitops
    app.kubernetes.io/component: git-ops-colour-frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the git-ops-colour-frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app.kubernetes.io/name: colour-gitops
    app.kubernetes.io/component: git-ops-colour-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colour-gitops
  namespace: colour-gitops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - colour.geshi.ca
    secretName: colour-weaveworks-tech-crt
  rules:
  - host: colour.geshi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: git-ops-colour-frontend
            port:
              number: 80
